# Secure-2FA

./: .gitignore  README.md  build_output.txt  out.txt  package-lock.json  package.json  raw2.txt  raw_warnings.txt  release_notes.md  svelte_check.json  svelte_warnings.txt  tauri_build_output.txt  tauri_build_output_2.txt  tauri_dev_output.txt  vite.config.js
setup-gui/: package-lock.json  package.json
setup-gui/src/: index.html  main.js
setup-gui/src-tauri/: 2  Cargo.toml  error.txt  error_log.txt  tauri.conf.json
setup-gui/src-tauri/capabilities/: default.json
setup-gui/src-tauri/src/: github.rs  installer.rs  lib.rs  main.rs
src/: app.css  app.html
src-tauri/: Cargo.toml  check_err.json  check_err.txt  check_err_utf8.txt  check_output.txt  check_rendered.txt  tauri.conf.json  test_output.txt  vault.db
src-tauri/.sqlx/: query-46ead5c1f2aa61be53497794645f4e40df30a4d99e1a1a674123b650c857edc1.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20260220053550_create_accounts_table.sql
src-tauri/src/: crypto.rs  db.rs  lib.rs  main.rs  totp.rs
src/lib/components/: AccountCard.svelte  AddAccountModal.svelte  PinPad.svelte  PinSettingsModal.svelte  ScreenCapture.svelte  ServiceIcon.svelte  Titlebar.svelte  Toast.svelte
src/routes/: +layout.svelte  +page.svelte
